This file contains information about Fuego releases.

Current development version (branch VERSION_0_1_FIXES)
======================================================

* Fix bug in SgUctTreeIterator (some nodes were visited multiple times)

Version 0.1 - 2008 May 30
=========================

Initial release. Compilation and functionality are tested on current Linux
distributions (Fedora 8, Ubuntu 8.04 LTS) and Mac OS X.