@@ -545,7 +545,7 @@ public:
     */
     float GetBound(const SgUctNode& node, const SgUctNode& child) const;
 
-    const SgUctStatisticsBase& GetSignatureStat(SgMove mv) const;
+    const SgUctStatisticsBaseVolatile& GetSignatureStat(SgMove mv) const;
 
     // @} // @name
 
@@ -955,7 +955,7 @@ private:
     SgFastLog m_fastLog;
 #endif
 
-    std::vector<SgUctStatisticsBase> m_signatureStat;
+    std::vector<SgUctStatisticsBaseVolatile> m_signatureStat;
 
     void ApplyRootFilter(std::vector<SgMove>& moves);
 
