@@ -65,8 +65,6 @@ void SgUctTree::ApplyFilter(std::size_t allocatorId, const SgUctNode& node,
     // SetNuChildren() must be called last, because of SgUctTree guarantees
     // that the children exist, if NuChildren() is greater zero.
     // See multi-threading comment at class SgUctSearch.
-    // NOTE: no guarantee yet, that compiler does not reorder these
-    // instructions
     SgUctNode& nonConstNode = const_cast<SgUctNode&>(node);
     nonConstNode.SetFirstChild(firstChild);
     nonConstNode.SetNuChildren(nuChildren);
@@ -192,8 +190,6 @@ void SgUctTree::CreateChildren(std::size_t allocatorId, const SgUctNode& node,
     // SetNuChildren() must be called last, because of SgUctTree guarantees
     // that the children exist, if NuChildren() is greater zero.
     // See multi-threading comment at class SgUctSearch.
-    // NOTE: no guarantee yet, that compiler does not reorder these
-    // instructions
     nonConstNode.SetFirstChild(firstChild);
     nonConstNode.SetNuChildren(nuChildren);
 }
