@@ -16,6 +16,9 @@
 
 typedef SgStatisticsBase<float,std::size_t> SgUctStatisticsBase;
 
+typedef SgStatisticsBase<volatile float,volatile std::size_t>
+    SgUctStatisticsBaseVolatile;
+
 //----------------------------------------------------------------------------
 
 /** Node used in SgUctTree. */
@@ -117,19 +120,19 @@ public:
     void SetSignature(std::size_t sig);
 
 private:
-    SgUctStatisticsBase m_statistics;
+    SgUctStatisticsBaseVolatile m_statistics;
 
-    const SgUctNode* m_firstChild;
+    const SgUctNode* volatile m_firstChild;
 
-    int m_nuChildren;
+    volatile int m_nuChildren;
 
-    SgMove m_move;
+    volatile SgMove m_move;
 
-    SgUctStatisticsBase m_raveValue;
+    SgUctStatisticsBaseVolatile m_raveValue;
 
-    std::size_t m_posCount;
+    volatile std::size_t m_posCount;
 
-    std::size_t m_signature;
+    volatile std::size_t m_signature;
 };
 
 inline SgUctNode::SgUctNode(SgMove move)
